--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/UserEditProfile.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/UserEditProfile.cshtml
@@ -3,17 +3,21 @@
     var userId = Context.Session.GetString("userId");
 }
 <partial name ="_Navbar1" />
+
+<input type ="hidden" value="@userId" id="userId" />
 <section class="border-top">
     <div class="container">
         <div class="row">
             <div class="mt-5 d-flex justify-content-center justify-content-md-center col-12 col-lg-3">
                 <div>
                     <div class="border p-5">
-                        <div class="ps-1">
-                            <img src="~/images/user-img.png" class="rounded-circle my-profile-img h-100 w-100"
+                        <div class="ps-1" id="userImgDiv">
+                            <img src="@Model.Avatar" id="userImg" class="rounded-circle my-profile-img w-100"
                                  alt="">
                         </div>
-                        <div class="mt-1 ps-2 p-lg-0">Evan Donouhue</div>
+
+                       <input type = "file" id="userInputImg" accept=".jpg, .jpeg, .png" hidden />
+                        <div class="mt-1 ps-2 p-lg-0">@Model.FirstName @Model.LastName</div>
                         <a href="" data-bs-toggle="modal" data-bs-target="#passwordModal"
                            class="font-size text-secondary ms-3 ms-lg-1 mt-1 text-decoration-none">
                             Change
@@ -34,10 +38,11 @@
                         <form id="editPasswordForm">  
                         <div class="modal-body">
                             <input type="hidden" value="userId" name="userId" />
-                            <input type="password" class="form-control" asp-for = "OldPassword" placeholder="Enter old password">
-                            <input type="password" class="form-control mt-3" asp-for= "Password" placeholder="Enter new password">
+                            <input type="password" class="form-control" id="oldPassword" asp-for = "OldPassword" placeholder="Enter old password">
+                            <span asp-validation-for="OldPassword" id="oldPasswordSpan" class="text-danger error-span"></span>
+                            <input type="password" class="form-control mt-3" id="newPassword" asp-for= "Password" placeholder="Enter new password">
                             <span asp-validation-for="Password" class="text-danger error-span"></span>
-                            <input type="password" class="form-control mt-3" asp-for="ConfirmPasword" placeholder="Enter confirm password">
+                            <input type="password" class="form-control mt-3" id="confirmPassword" asp-for="ConfirmPasword" placeholder="Enter confirm password">
                             <span asp-validation-for="ConfirmPasword" class="text-danger error-span"></span>
                         </div>
                         <div class="modal-footer border-0">
@@ -103,7 +108,10 @@
                         <div class="modal-body d-flex justify-content-between">
                             <div class="border ps-3 py-3 pe-5">
                                 <ul class="skill-list px-0">
-                                    <li>first div</li>
+                                    @foreach(var skill in Model.SkillsList)
+                                    {
+                                    <li>@skill.SkillName</li>
+                                    }
                                 </ul>
                             </div>
                             <div class="d-flex flex-column justify-content-center">
@@ -203,17 +211,25 @@
                     </div>
                     <div class="row mt-md-3 mt-sm-0 mt-3">
                         <div class="col-12 col-md-6">
-                            <label for="city" class="form-label">City</label>
-                            <select id="city" class="form-select text-secondary" asp-for="CityId">
+                                <label for="city-filter" class="form-label">City</label>
+                                <select id="city-filter" class="form-select text-secondary" asp-for="CityId">
                                 <option selected disabled>Select your city</option>
-                            </select>
+                                @foreach(var city in Model.Cities)
+                                    {
+                                        <option value="@city.CityId" >@city.Name</option>
+                                    }
+                                </select>
                                 <span asp-validation-for="CityId" class="text-danger error-span"></span>
                         </div>
                         <div class="col-12 col-md-6 mt-3 mt-sm-0">
-                            <label for="country" class="form-label">Country*</label>
-                            <select asp-for="CountryId" id="country" class="form-select text-secondary">
+                                <label for="country-filter" class="form-label">Country*</label>
+                                <select asp-for="CountryId" id="country-filter" class="form-select text-secondary">
                                 <option selected disabled>Select your country</option>
-                            </select>
+                                @foreach(var country in Model.Countries)
+                                    {
+                                        <option value="@country.CountryId">@country.Name</option>
+                                    }
+                                </select>
                                 <span asp-validation-for="CountryId" class="text-danger error-span"></span>
 
                         </div>
@@ -229,6 +245,10 @@
                                 <label for="availbility" class="form-label">Availbility</label>
                                 <select id="availbility" class="form-select text-secondary">
                                     <option selected disabled>Select your availability</option>
+                                        <option value="0">Daily</option>
+                                        <option value="1">Weekly</option>
+                                        <option value="2">Weekend</option>
+                                        <option value="3">Monthly</option>
                                 </select>
                             </div>
                             <div class="col-12 col-md-6 mt-3 mt-sm-0">
@@ -276,8 +296,10 @@
 
 </section>
 
+
 @section Scripts{
     <partial name ="_ValidationScriptsPartial" />
+    <script src="~/js/editProfile.js"></script>
 }
 
 <partial name ="_Footer" />
