--- a/MVC/CI-Platform/CIPlatformWeb/wwwroot/css/home.css
+++ b/MVC/CI-Platform/CIPlatformWeb/wwwroot/css/home.css
@@ -23,6 +23,9 @@
     border: 2px solid #757575;
 }
 
+.my-profile-img{
+    height: 7rem !important;
+}
 .volunteer-img {
     height: 4rem;
     width: 4rem;
